--- a/cohortiq-web/package.json
+++ b/cohortiq-web/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "predeploy": "vite build",
+    "predeploy": "vite build && cp dist/index.html dist/404.html",
     "deploy": "gh-pages -d dist -b gh-pages"
   },
   "dependencies": {
